# 2026-spring-AI-Development

./: README.md  pyproject.toml
.github/workflows/: deploy-leaderboard.yml
data/: generate_gold_silver_pdfs.py
leaderboard/: Dockerfile  Makefile  app.py  database.py  seed_lecture4.py  test_leaderboards.py
leaderboard/templates/: lecture2.html  lecture3.html  lecture4.html
lecture_1/: pyproject.toml
lecture_2/: Makefile  pyproject.toml
lecture_2/leaderboard/: Makefile  app.py  database.py
lecture_2/leaderboard/templates/: leaderboard.html
lecture_2/notebooks/: resume_screening.ipynb  resume_utils.py
lecture_2/slides/: lecture_2.tex
lecture_3/: PLAN.md  pyproject.toml  test_gold_silver_scoring.py
lecture_3/data/: build_gold_silver_csv.py  gold_silver_resumes_draft.md
lecture_3/notebooks/: lecture_3_resume_scorer_improvement.ipynb  resume_utils.py
lecture_3/slides/: lecture_3.tex
lecture_4/: pyproject.toml
lecture_4/data/: resumes_final_with_gold_silver.csv
lecture_4/notebooks/: agent_utils.py  lecture_4_application_routing_agent.ipynb  lecture_4_optimized_scorer.ipynb  optimized_prompt.txt  prompt_optimizer.py  resume_utils.py
lecture_4/slides/: lecture_4.tex
