[project]
name = "lecture_2"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "jupyter==1.1.0",
  "pandas==2.2.3",
  "httpx==0.27.2",
  "python-dotenv==1.0.1",
  "pydantic>=2.0.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "jinja2>=3.1.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["B", "I", "E501", "UP"]

