[project]
name = "lecture_4"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "jupyter==1.1.0",
  "pandas==2.2.3",
  "numpy>=1.24.0",
  "httpx==0.27.2",
  "python-dotenv==1.0.1",
  "pydantic>=2.0.0",
  "matplotlib>=3.7.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["B", "I", "E501", "UP"]

